fixed scrollbar bug

--- a/src/App.css
+++ b/src/App.css
@@ -59,10 +59,10 @@ img {
 
 @media (min-width: 500px) {
   .body {
-    justify-content: center;
-    /* padding-top: 0; */
+    /* justify-content: center;
+    padding-top: 0; */
     padding-top: 2rem;
-    overflow-y: scroll;
+    /* overflow-y: scroll; */
   }
 }
 @media (min-width: 768px) {
